# coffee

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  spirvtest
.github/workflows/: ci.yml  integration.yml  rust.yml
examples/: README.md  color.rs  colors.rs  counter.rs  gamepad.rs  image.rs  input.rs  menu.rs  mesh.rs  particles.rs  pong.rs  progress.rs  rectangle.rs  snake.rs  ui.rs
src/: game.rs  graphics.rs  input.rs  lib.rs  load.rs  loader.rs  loading_screen.rs  result.rs  state.rs  timer.rs  ui.rs  window.rs
src/debug/: basic.rs  mod.rs  null.rs
src/game/: loop.rs
src/graphics/: batch.rs  canvas.rs  color.rs  draw_parameters.rs  font.rs  gpu.rs  image.rs  mesh.rs  mod.rs  point.rs  quad.rs  rectangle.rs  shape.rs  sprite.rs  sprite_batch.rs  target.rs  text.rs  texture_array.rs  transformation.rs  vector.rs  window.rs
src/graphics/backend_gfx/: GGEZ_LICENSE  font.rs  format.rs  mod.rs  pipeline.rs  quad.rs  surface.rs  texture.rs  triangle.rs  types.rs
src/graphics/backend_gfx/shader/: quad.frag  quad.vert  triangle.frag  triangle.vert
src/graphics/backend_wgpu/: font.rs  mod.rs  pipeline.rs  quad.rs  surface.rs  texture.rs  triangle.rs  types.rs
src/graphics/backend_wgpu/pipeline/: triangle.rs
src/graphics/backend_wgpu/shader/: quad.frag.spv  quad.vert  quad.vert.spv  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/graphics/coffee_gfx/: mod.rs
src/graphics/coffee_wgpu/: font.rs  mod.rs  pipeline.rs  types.rs
src/graphics/coffee_wgpu/shader/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
src/graphics/gpu/: font.rs  mod.rs  pipeline.rs  texture.rs  types.rs
src/graphics/gpu/shader/: basic.frag  basic.vert
src/graphics/texture_array/: batch.rs  builder.rs  loader.rs  mod.rs
src/graphics/window/: cursor_icon.rs  event.rs  frame.rs  mod.rs  settings.rs
src/input/: event.rs  gamepad.rs  keyboard.rs  keyboard_and_mouse.rs  mod.rs  mouse.rs  window.rs
src/input/gamepad/: event.rs  mod.rs
src/input/keyboard/: event.rs  mod.rs
src/input/mouse/: event.rs  mod.rs  wheel_movement.rs
src/input/window/: event.rs
src/load/: loading_screen.rs  mod.rs  task.rs
src/load/loading_screen/: progress_bar.rs
src/ui/: button.rs  checkbox.rs  column.rs  core.rs  element.rs  event.rs  hasher.rs  interface.rs  layout.rs  map.rs  mod.rs  mouse_cursor.rs  node.rs  panel.rs  radio.rs  renderer.rs  root.rs  row.rs  slider.rs  style.rs  text.rs  widget.rs
src/ui/core/: element.rs  event.rs  hasher.rs  interface.rs  layout.rs  mouse_cursor.rs  node.rs  renderer.rs  style.rs  widget.rs
src/ui/core/widget/: button.rs  checkbox.rs  column.rs  panel.rs  radio.rs  row.rs  slider.rs  text.rs
src/ui/renderer/: basic.rs  button.rs  checkbox.rs  image.rs  mod.rs  panel.rs  progress_bar.rs  radio.rs  slider.rs  text.rs
src/ui/renderer/basic/: button.rs  checkbox.rs  panel.rs  radio.rs  slider.rs  text.rs
src/ui/widget/: button.rs  checkbox.rs  column.rs  image.rs  panel.rs  progress_bar.rs  radio.rs  row.rs  slider.rs  text.rs
tests/: diff_shaders  graphics.rs
tests/_graphics/: mod.rs  test.rs
tests/_graphics/test/: mesh.rs
