[package]
name = "coffee"
version = "0.4.1"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "An opinionated 2D game engine focused on simplicity, explicitness, and type-safety"
license = "MIT"
repository = "https://github.com/hecrj/coffee"
documentation = "https://docs.rs/coffee"
readme = "README.md"
keywords = ["game", "engine", "2D", "graphics", "coffee"]
categories = ["game-engines"]
exclude = ["images/*"]

[package.metadata.docs.rs]
features = ["opengl", "debug"]

[features]
default = []
opengl = ["gfx", "gfx_core", "glutin", "gfx_device_gl", "gfx_glyph"]
vulkan = ["wgpu", "wgpu_glyph", "zerocopy", "futures"]
metal = ["wgpu", "wgpu_glyph", "zerocopy", "futures"]
dx11 = ["wgpu", "wgpu_glyph", "zerocopy", "futures"]
dx12 = ["wgpu", "wgpu_glyph", "zerocopy", "futures"]
debug = []

[dependencies]
image = "0.21"
nalgebra = "0.18"
rayon = "1.0"
stretch = "0.2"
twox-hash = "1.3"
lyon_tessellation = "0.13"
gilrs = "0.7"
winit = "0.22"

# gfx (OpenGL)
gfx = { version = "0.18", optional = true }
gfx_core = { version = "0.9", optional = true }
gfx_device_gl = { version = "0.16", optional = true }
gfx_glyph = { version = "0.15", optional = true }
glutin = { version = "0.24", optional = true }

# wgpu (Vulkan, Metal, D3D)
wgpu = { version = "0.5", optional = true }
wgpu_glyph = { version = "0.8", optional = true }
zerocopy = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.6"
env_logger = "0.6"
